--- a/programs.html
+++ b/programs.html
@@ -602,7 +602,7 @@
                         <div class="gdlr-core-title-item-title-wrap clearfix centerdiv">
                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
                                 style="font-size: 55px ;font-weight: 300 ;letter-spacing: 0px ;text-transform: uppercase ;color: #EB8223 ;background-color: white;padding: 20px 40px 20px 40px;width: fit-content;">
-                                Programmes</h3>
+                                Programs</h3>
                         </div>
                     </div>
                 </div>
@@ -621,9 +621,11 @@
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="img/Programs/Foundation-Studies.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="foundation-studies.html">
+                                                    <img src="img/Programs/Foundation-Studies.png" width="700"
+                                                        height="660" alt="" /></a>
+                                                    </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Foundation Studies</h5>
@@ -633,9 +635,11 @@
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="img/Programs/Visual-Communication.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="visual-communication.html">
+                                                        <img src="img/Programs/Visual-Communication.png" width="700"
+                                                            height="660" alt="" /></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Visual Communication</h5>
@@ -645,9 +649,11 @@
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="img/Programs/Fashion-Marketing-Management-Design.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="fashion-management-design.html">
+                                                        <img src="img/Programs/Fashion-Marketing-Management-Design.png"
+                                                            width="700" height="660" alt="" /></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Fashion Marketing & Management Design</h5>
@@ -657,9 +663,11 @@
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="img/Programs/Interior-Design.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="interior-design.html">
+                                                        <img src="img/Programs/Interior-Design.png" width="700"
+                                                            height="660" alt="" /></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Interior Design</h5>
@@ -669,21 +677,26 @@
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="img/Programs/Jewelery-Design.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="jewelery-design.html">
+                                                        <img src="img/Programs/Jewelery-Design.png" width="700"
+                                                            height="660" alt="" /></a>
+                                                </div>
                                             </div>
                                         </div>
-                                        <h5 class="programmes-h5">Jewellery Design</h5>
+                                        <h5 class="programmes-h5">Jewelery Design</h5>
                                     </div>
                                     <div
                                         class="gdlr-core-item-list  gdlr-core-item-pdlr gdlr-core-item-mgb gdlr-core-column-20">
                                         <div
                                             class="gdlr-core-blog-modern  gdlr-core-with-image gdlr-core-hover-overlay-content gdlr-core-opacity-on-hover gdlr-core-zoom-on-hover">
                                             <div class="gdlr-core-blog-modern-inner">
-                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image"><img
-                                                        src="/img/Programs/Fashion-Design.png" width="700"
-                                                        height="660" alt="" /></div>
+                                                <div class="gdlr-core-blog-thumbnail gdlr-core-media-image">
+                                                    <a href="fashion-design.html">
+                                                        <img src="/img/Programs/Fashion-Design.png" width="700"
+                                                            height="660" alt="" />
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                         <h5 class="programmes-h5">Fashion Design</h5>
