--- a/visual-communication.html
+++ b/visual-communication.html
@@ -605,8 +605,8 @@
                                                     style="padding-bottom: 20px ;">
                                                     <div class="gdlr-core-title-item-title-wrap clearfix">
                                                         <h3
-                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css">
-                                                            Interior Design</h3>
+                                                            class="gdlr-core-title-item-title gdlr-core-skin-title h3-css-vis">
+                                                            Visual Communication</h3>
                                                     </div>
                                                 </div>
                                             </div>
@@ -631,19 +631,13 @@
                                                     style="padding-bottom: 0px ;">
                                                     <div
                                                         class="gdlr-core-text-box-item-content prg-width p-color mrg-lft">
-                                                        <p>Interior design is the art and science that enhance buildings
-                                                            from the inside,
-                                                            and increase their aesthetics.the study of interior design
-                                                            includes the design
-                                                            and planning of spaces and interior spaces, creative problem
-                                                            solving, knowledge
-                                                            of building materials and design history. It also plays the
-                                                            main and essential role
-                                                            in maintaining the integrity of the building.The interior
-                                                            design aspects consist
-                                                            of both technical aspects and planning aspects. This is in
-                                                            addition to the technical
-                                                            and aesthetic aspects.
+                                                        <p>It is the field that combines design and technology, and it
+                                                            is the tool that is used to
+                                                            carry creative ideas from the product to the target audience
+                                                            in a visual language.
+                                                            This program offers the study of basic theories and
+                                                            technical skills in design, and
+                                                            then work on their implementation.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -751,9 +745,12 @@
                                                                             <div class="gdlr-core-text-box-item-content"
                                                                                 id="div_983a_27">
                                                                                 <p class="p-about"
-                                                                                    style="color: rgb(0, 0, 0);"><br>• Design thinking<br><br>
-                                                                                    • History of visual communication<br><br>
-                                                                                    • Academic research and communication skills<br><br>
+                                                                                    style="color: rgb(0, 0, 0);"><br>•
+                                                                                    Design thinking<br><br>
+                                                                                    • History of visual
+                                                                                    communication<br><br>
+                                                                                    • Academic research and
+                                                                                    communication skills<br><br>
                                                                                     • Print media and production
                                                                                 </p>
                                                                             </div>
