--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                             <li class="menu-item" data-size="60"><a href="404.html">404 Page</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="menu-item kingster-normal-menu"><a href="#"
+                                    <li class="menu-item kingster-normal-menu"><a href="services.html"
                                             class="sf-with-ul-pre">Services</a>
                                     </li>
                                     <li class="menu-item kingster-normal-menu">
