--- a/services.html
+++ b/services.html
@@ -823,7 +823,7 @@
                                                 </div>
                                             </div>
                                             <div
-                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first  clearfix">
+                                                class="gdlr-core-event-item-list gdlr-core-style-grid gdlr-core-item-pdlr gdlr-core-column-20-left gdlr-core-column-first-left  clearfix">
                                                 <div class="gdlr-core-event-item-thumbnail">
                                                     <a href="#"><img src="img/foundation/art-history.jpg" width="900"
                                                             height="500" alt="" /></a>
