--- a/lifeinriyadh.html
+++ b/lifeinriyadh.html
@@ -292,9 +292,9 @@
                                         <li class="menu-item kingster-normal-menu"><a href="collaboration.html">Collaboration</a></li>
                                     </ul> -->
                             <div class="kingster-top-bar-right-social"></div>
-                            <a class="kingster-top-bar-right-button" href="#">Life In Riyadh</a>
+                            <a class="kingster-top-bar-right-button active-btn" href="lifeinriyadh.html">Life In Riyadh</a>
                             <a class="kingster-top-bar-right-button " href="collaboration.html">Collaboration</a>
-                            <a class="kingster-top-bar-right-button active-btn" href="#">Gallery</a>
+                            <a class="kingster-top-bar-right-button " href="#">Gallery</a>
                             <ul id="kingster-top-bar-menu"
                                 class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="homepage-ar.html"><img
